# invest-portfolio-bot

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  classify.py  config.py  docker-compose.yml  formatting.py  handlers.py  models.py  portfolio.py  pyproject.toml  rebalance.py  target.py  target.yaml  tinvest.py
scripts/: invest-portfolio-bot.service  list_account.py  smoke_portfolio.py  start.sh
tests/: test_classify.py  test_rebalance.py  test_target.py
